--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-doc
-doc_gui
+*.java linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
+*.css linguist-detectable=false
