--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 * linguist-vendored
-*.java linguist-vendored=true
-*.js linguist-vendored=false
-*.html linguist-vendored=false
-*.xml linguist-vendored=false
-*.css linguist-vendored=false
+*.java linguist-vendored=false
+*.js linguist-vendored=true
+*.html linguist-vendored=true
+*.xml linguist-vendored=true
+*.css linguist-vendored=true
